[gd_scene load_steps=2 format=3 uid="uid://cnc7h6xdn8j2b"]

[ext_resource type="Script" uid="uid://belcho33sfd5r" path="res://ui/start_connect_menu.gd" id="1_3om0k"]

[node name="StartConnectMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3om0k")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "FPS Deathmatch"
horizontal_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Player Name"

[node name="PlayerNameEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
placeholder_text = "your name"

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/v_separation = 32
columns = 4

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/GridContainer"]
layout_mode = 2
text = "hOST gAME"

[node name="seperator" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/GridContainer"]
layout_mode = 2

[node name="HostPort" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer/GridContainer"]
layout_mode = 2
text = "25026"
placeholder_text = "PORT"

[node name="HostButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/GridContainer"]
layout_mode = 2
text = "Host"

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/GridContainer"]
layout_mode = 2
text = "join gamME"

[node name="JoinIp" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer/GridContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "localhost"
placeholder_text = "ip"

[node name="JoinPort" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer/GridContainer"]
layout_mode = 2
text = "25026"
placeholder_text = "PORT"

[node name="JoinButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/GridContainer"]
layout_mode = 2
text = "join"
